modified example csproj

--- a/examples/ConsoleApp/ConsoleApp1/ConsoleApp1.csproj
+++ b/examples/ConsoleApp/ConsoleApp1/ConsoleApp1.csproj
@@ -6,7 +6,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DenganID.Networking.RemotePing" Version="1.0.1" />
+    <ProjectReference Include="..\..\..\src\DenganID.Networking.RemotePing\DenganID.Networking.RemotePing.csproj" />
   </ItemGroup>
-
 </Project>
